--- a/Views/Modulo/Create.cshtml
+++ b/Views/Modulo/Create.cshtml
@@ -3010,23 +3010,8 @@
                                         <hr />
                                         <h4>Setting</h4>
                                         <hr />
-                                        <div class="form-group row">
-                                            <div class="col-sm-5">
-                                                <label class="control-label">Scegli la verbosità</label>
-                                            </div>
-                                            <select class="col-sm-5" asp-for="@Model.WIFITE.Verbose">
-                                                <option value="0">zero </option>
-                                                <option value="1">quiet </option>
-                                                <option value="2">deep </option>
-                                            </select>
-                                        </div>
-                                        <div class="form-group row">
-                                                <div class="col-sm-6">
-                                                    <label class="control-label">
-                                                        <input type="checkbox" asp-for="@Model.WIFITE.interfaccia" /> Interface (-i)
-                                                    </label>
-                                                </div>
-                                            </div>
+                                        
+                                        
                                               <div class="form-group row">
                                             <div class="col-sm-4">
                                                 <label class="control-label">Setta il canale (-1 indica che tutti i canali sono settati)</label>
@@ -3037,7 +3022,7 @@
                                              <div class="form-group row">
                                                 <div class="col-sm-6">
                                                     <label class="control-label">
-                                                        <input type="checkbox" asp-for="@Model.WIFITE.mac" /> MAC (-mac)
+                                                        <input type="checkbox" asp-for="@Model.WIFITE.verbositaWifite" /> Verbosità (-v)
                                                     </label>
                                                 </div>
                                             </div>
@@ -3118,13 +3103,16 @@
                                             </div>
                                         <div class="col-sm-12">
                                             <hr/>
+                                            <div clas="form-group row">
+                                                <h3><strong>Ricorda di disabilitare il Monitor Mode tramite: 'airmon-ng stop [nomeInterfaccia]'!</strong></h3>
+                                        </div>
                                             <div class="col-sm-5">
                                                 <div clas="form-group row">
-                                                 <a href="https://en.kali.tools/?p=18..c%27%C3%A8"target="_blank"><span class="glyphicon glyphicon-info-sign" style="font-size:90%"></span>
+                                                 <a href="https://github.com/derv82/wifite2" target="_blank"><span class="glyphicon glyphicon-info-sign" style="font-size:90%"></span>
                                         sito</a>
                                         </div>
                                                 <div clas="form-group row">
-                                                 <a href="https://github.com/derv82/wifite2"target="_blank"><span class="glyphicon glyphicon-info-sign" style="font-size:90%"></span>
+                                                 <a href="https://en.kali.tools/?p=18..c%27%C3%A8" target="_blank"><span class="glyphicon glyphicon-info-sign" style="font-size:90%"></span>
                                         consulta il documentazione di Wifite </a>
                                         </div>
                                         </div>
