--- a/Views/Modulo/Create.cshtml
+++ b/Views/Modulo/Create.cshtml
@@ -2774,6 +2774,9 @@
                                             <hr/>
                                             <div class="col-sm-5">
                                                 <div clas="form-group row">
+                                                 <span class="glyphicon glyphicon-eye-open" style="font-size:90%"></span><h5 style="color:red">Non restituisce un report!</h5>
+                                        </div>
+                                                <div clas="form-group row">
                                                  <a href="https://github.com/codingo/NoSQLMap"target="_blank"><span class="glyphicon glyphicon-info-sign" style="font-size:90%"></span>
                                         consulta il documentazione di NoSQLMap </a>
                                         </div>
@@ -3104,7 +3107,7 @@
                                         <div class="col-sm-12">
                                             <hr/>
                                             <div clas="form-group row">
-                                                <h3><strong>Ricorda di disabilitare il Monitor Mode tramite: 'airmon-ng stop [nomeInterfaccia]'!</strong></h3>
+                                                <h5 style="color:red"><strong><span class="glyphicon glyphicon-eye-open" style="font-size:90%"></span> Ricorda di disabilitare il Monitor Mode tramite: 'airmon-ng stop [nomeInterfaccia]'!</strong></h5>
                                         </div>
                                             <div class="col-sm-5">
                                                 <div clas="form-group row">
