--- a/Views/Progetto/Edit.cshtml
+++ b/Views/Progetto/Edit.cshtml
@@ -103,6 +103,7 @@
                                                 <td>
                                                     @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target)
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].ModuloID)
+                                                    @Html.HiddenFor(model => model.ListaModuliConTarget[i].Applicazione)
                                                 </td>
                                             </tr>       
                                     }
@@ -157,6 +158,7 @@
                                                 <td>
                                                     @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target)
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].ModuloID)
+                                                    @Html.HiddenFor(model => model.ListaModuliConTarget[i].Applicazione)
                                                 </td>
                                             </tr>
                                     }
@@ -211,6 +213,7 @@
                                                 <td>
                                                     @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target)
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].ModuloID)
+                                                    @Html.HiddenFor(model => model.ListaModuliConTarget[i].Applicazione)
                                                 </td>
                                             </tr>  
                                     }
@@ -276,6 +279,7 @@
                                                 <td>
                                                     @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target)
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].ModuloID)
+                                                    @Html.HiddenFor(model => model.ListaModuliConTarget[i].Applicazione)
                                                 </td>
                                             </tr>  
                                     }
@@ -332,6 +336,7 @@
                                                 <td>
                                                     @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target)
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].ModuloID)
+                                                    @Html.HiddenFor(model => model.ListaModuliConTarget[i].Applicazione)
                                                 </td>
                                             </tr>
                                     }
@@ -387,6 +392,7 @@
                                                 <td>
                                                     @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target)
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].ModuloID)
+                                                    @Html.HiddenFor(model => model.ListaModuliConTarget[i].Applicazione)
                                                 </td>
                                             </tr>
                                     }
@@ -455,6 +461,7 @@
                                                 <td>
                                                     @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target)
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].ModuloID)
+                                                    @Html.HiddenFor(model => model.ListaModuliConTarget[i].Applicazione)
                                                 </td>
                                             </tr>
                                     }
@@ -512,6 +519,7 @@
                                                 <td>
                                                     @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target)
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].ModuloID)
+                                                    @Html.HiddenFor(model => model.ListaModuliConTarget[i].Applicazione)
                                                 </td>
                                             </tr>
                                     }
@@ -568,6 +576,7 @@
                                                 <td>
                                                     @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target)
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].ModuloID)
+                                                    @Html.HiddenFor(model => model.ListaModuliConTarget[i].Applicazione)
                                                 </td>
                                             </tr>
                                     }
@@ -634,6 +643,7 @@
                                                 <td>
                                                     @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target)
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].ModuloID)
+                                                    @Html.HiddenFor(model => model.ListaModuliConTarget[i].Applicazione)
                                                 </td>
                                             </tr>
                                     }
@@ -690,6 +700,7 @@
                                                 <td>
                                                     @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target)
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].ModuloID)
+                                                    @Html.HiddenFor(model => model.ListaModuliConTarget[i].Applicazione)
                                                 </td>
                                             </tr>
                                     }
@@ -748,6 +759,7 @@
                                                 <td>
                                                     @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target)
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].ModuloID)
+                                                    @Html.HiddenFor(model => model.ListaModuliConTarget[i].Applicazione)
                                                 </td>
                                             </tr>
                                     }
@@ -816,6 +828,7 @@
                                                 <td>
                                                     @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target)
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].ModuloID)
+                                                    @Html.HiddenFor(model => model.ListaModuliConTarget[i].Applicazione)
                                                 </td>
                                             </tr>
                                     }
@@ -872,6 +885,7 @@
                                                 <td>
                                                     @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target)
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].ModuloID)
+                                                    @Html.HiddenFor(model => model.ListaModuliConTarget[i].Applicazione)
                                                 </td>
                                             </tr>
                                     }
@@ -929,6 +943,7 @@
                                                 <td>
                                                     @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target)
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].ModuloID)
+                                                    @Html.HiddenFor(model => model.ListaModuliConTarget[i].Applicazione)
                                                 </td>
                                             </tr>
                                     }
@@ -995,6 +1010,7 @@
                                                 <td>
                                                     @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target)
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].ModuloID)
+                                                    @Html.HiddenFor(model => model.ListaModuliConTarget[i].Applicazione)
                                                 </td>
                                             </tr>
                                     }
@@ -1053,6 +1069,7 @@
                                                 <td>
                                                     @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target)
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].ModuloID)
+                                                    @Html.HiddenFor(model => model.ListaModuliConTarget[i].Applicazione)
                                                 </td>
                                             </tr>
                                     }
@@ -1111,6 +1128,7 @@
                                                 <td>
                                                     @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target)
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].ModuloID)
+                                                    @Html.HiddenFor(model => model.ListaModuliConTarget[i].Applicazione)
                                                 </td>
                                             </tr>
                                     }
@@ -1180,6 +1198,7 @@
                                                 <td>
                                                     @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target)
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].ModuloID)
+                                                    @Html.HiddenFor(model => model.ListaModuliConTarget[i].Applicazione)
                                                 </td>
                                             </tr>
                                     }
