--- a/Views/Report/Details.cshtml
+++ b/Views/Report/Details.cshtml
@@ -1,27 +1,30 @@
 @model webmva.Models.Report
 
-@{ ViewData["Title"] = "Dettagli Report";
+@{ ViewData["Title"] = "Report";
 List<webmva.Models.PercorsiReport> lista = ViewBag.Lista; }
 
 <div class="container">
     <h2><em>Dettagli Report</em></h2>
     <h3><em>Progetto:</em><strong> @Model.Progetto.Nome</strong></h3>
 
-    <div class="panel panel-default col-lg-10 col-md-offset-1">
+    <div class="panel panel-default col-lg-111 col-md-offset-1">
             <table class="table">
                 <div class="method">
                    <thead>
                         <tr>
-                            <th></th>
+                            <th> <input type="checkbox" name="selezionati" /></th>
+                          
                             <th>
                                 Percorso
                             </th>
                             
-                            <th></th>
+                            <th>Scarica nativo </th>
+                            <th>Scarica pdf</th>
                         </tr>
                     </thead>
                 </div>
             <tbody>
+                
                     @for(int i=0;i<lista.Count; i++)
                     {
                         <tr>
@@ -32,17 +35,32 @@ List<webmva.Models.PercorsiReport> lista = ViewBag.Lista; }
                               @Html.Raw(lista[i].Percorso)
                             </td>
                             <td>
-                                <div class="col-sm-8 col-sm-offset-6">
+                                <div class="form-group row ">
                                 <form asp-action="Download">
-                                    <input type="submit" value="Scarica" asp-action="Download" asp-route-filePath="Report/@lista[i].Percorso" class="btn btn-default" />
+                                    <input type="submit" value="Scarica Nativo" asp-action="Download" asp-route-filePath="Report/@lista[i].Percorso" class="btn btn-default" />  |
+                                    <input type="submit" value="Scarica PDF" class="btn btn-default" />  |
+                                    <a >Cancella </a>
                                 </form>
                                 </div>
                             </td>
 
                         </tr>
                     }
+                    
                 </tbody>
             </table>
+          
+            <div class="col-lg-12">
+                <br>
+                <div class="form-group row">
+                <div class="col-lg-6">
+                <input type="submit"  class="btn btn-default" value="Scarica tutto in PDF" />&nbsp;&nbsp; 
+                </div> 
+                 <div class="col-lg-6">                      
+                <input type="submit"  class="btn btn-default" value="Scarica" />&nbsp;&nbsp; 
+                </div>                      
+                </div>
+                </div>
         </div>
 </div>
 
